# Cpp-Simple-Car-Game

./: README.md
docs/: Setup.txt  Structure.md
versions/v1/src/: Game.cpp  Game.h  OptionsScene.cpp  OptionsScene.h  PlayScene.cpp
versions/v2/: CMakeLists.txt
versions/v2/src/: Game.cpp  MenuScene.h  Text.h
versions/v3/src/: Game.cpp  PlayScene.h  RaceScene.cpp  RaceScene.h  Text.cpp
versions/v4/: CMakeLists.txt
versions/v4/src/: Game.h  MenuScene.cpp  OptionsScene.cpp  OptionsScene.h  RaceScene.cpp  RaceScene.h  Scene.h  main.cpp
